--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,16 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+*/
 body {
-  margin: 0;
+  /* margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
+  font-family: 'poppins', sans-serif;
 }
-
+/*
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
